can't fix img issue. set up projects and contact sections instead

--- a/index.html
+++ b/index.html
@@ -31,18 +31,24 @@
 		and I am a full stack web developer.</h2>
 		<div id="about-me-container">
 			<p id="about-me">What I love about coding is the fact that you never stop learning about it! The technologies are always growing and advancing so you have to always adapt with them.<br/><br/>
-			The thought of chiseling away at problems for hours or days on end and then seeing the results of your labor is something that drives me. Full Stack Development allows me to be creative, innovative and analytical at the same time and these are I that I have ever wanted to find in a career.<br/><br/>
-			When I'm not coding you can find me meditating and contemplating the vastness of the universe.<br/><br/>
+			The thought of chiseling away at problems for hours or days on end and then seeing the results of your labor is something that drives me. Full Stack Development allows me to be creative, innovative and analytical at the same time and these are all the things that I have ever wanted to find in a career.<br/><br/>
+			When I'm not coding you can find me meditating and contemplating the vastness of the universe.<br/><br/><br/>
 			</p>
 		</div>
 	</section>
 
 	<section id="my-work">
-	
+		<h2 id="my-work-header">My Work</h2>
+		<div id="project-container">
+asdfasdfasdfasd
+		</div>
 	</section>
 
 	<section id="contact">
+		<h2 id="contact-header">Contact Me!</h2>
+		<div id="contact-info-container">
 
+		</div>
 	</section>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
