--- a/index.html
+++ b/index.html
@@ -10,46 +10,62 @@
 	<link rel="stylesheet" href="./public/style.css" />
 </head>
 <body class="parallax">
-	<nav id="header">
-		<ul id="header-link-list">
-			<li class="header-links"><a href="#about">About</a></li>
-			<li class="header-links"><a href="#my-work">Portfolio</a></li>
-			<li class="header-links"><a href="#contact">Contact</a></li>
-		</ul>
-	</nav>
-	
-	<header id="intro-heading">
-		<section id="intro-container">
-			<h1 id="intro-mainheader">JEFFREY CHOU</h1>
-			<p id="intro-subheader">WEB DEVELOPER</p>
-		</section>
-	</header>
+	<div class="navbar-fixed">
+		<nav id="header">
+			<div class="nav-wrapper">
+				<ul id="header-link-list">
+					<li class="header-links"><a href="#about">About</a></li>
+					<li class="header-links"><a href="#my-work">Portfolio</a></li>
+					<li class="header-links"><a href="#contact">Contact</a></li>
+				</ul>
+			<div>
+		</nav>
+	</div>
 
-	<section id="about">
-		<h2>Hi! My name is Jeff
-		<br/>
-		and I am a full stack web developer.</h2>
-		<div id="about-me-container">
-			<p id="about-me">What I love about coding is the fact that you never stop learning about it! The technologies are always growing and advancing so you have to always adapt with them.<br/><br/>
-			The thought of chiseling away at problems for hours or days on end and then seeing the results of your labor is something that drives me. Full Stack Development allows me to be creative, innovative and analytical at the same time and these are all the things that I have ever wanted to find in a career.<br/><br/>
-			When I'm not coding you can find me meditating and contemplating the vastness of the universe.<br/><br/><br/>
-			</p>
+	<div>
+		<header id="intro-heading">
+			<section id="intro-container">
+				<h1 id="intro-mainheader">JEFFREY CHOU</h1>
+				<p id="intro-subheader">WEB DEVELOPER</p>
+			</section>
+		</header>
+		
+		<div class="section-container">
+			<section id="about">
+				<h2>Hi! My name is Jeff
+				<br/>
+				and I am a full stack web developer.</h2>
+				<div id="about-me-container">
+					<p id="about-me">What I love about coding is the fact that you never stop learning about it! The technologies are always growing and advancing so you have to always adapt with them.<br/><br/>
+					The thought of chiseling away at problems for hours or days on end and then seeing the results of your labor is something that drives me. Full Stack Development allows me to be creative, innovative and analytical at the same time and these are all the things that I have ever wanted to find in a career.<br/><br/>
+					When I'm not coding you can find me meditating and contemplating the vastness of the universe.<br/><br/><br/>
+					</p>
+				</div>
+			</section>
 		</div>
-	</section>
-
-	<section id="my-work">
-		<h2 id="my-work-header">My Work</h2>
-		<div id="project-container">
-asdfasdfasdfasd
+		
+		<div class="section-container">
+			<section id="my-work">
+				<h2 id="my-work-header">My Work</h2>
+				<div id="project-container">
+					
+				</div>
+			</section>
 		</div>
-	</section>
 
-	<section id="contact">
-		<h2 id="contact-header">Contact Me!</h2>
-		<div id="contact-info-container">
+		<div class="section-container">
+			<section id="contact">
+				<h2 id="contact-header">Contact Me!</h2>
+				<div id="contact-info-container">
 
+				</div>
+			</section>
 		</div>
-	</section>
+	</div>
+
+	<footer id="footer">
+		<p id="copyright">&copy Jeffrey Chou 2017</p>
+	</footer>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/js/materialize.min.js"></script>
