added contact images and links

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Jeffrey Chou</title>
-	<link rel="stylesheet" href="./public/reset.css" />
+	<link rel="stylesheet" href="./public/styles/reset.css" />
 	<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/css/materialize.min.css" />
-	<link rel="stylesheet" href="./public/style.css" />
+	<link rel="stylesheet" href="./public/styles/style.css" />
 </head>
 <body>
 	<div>
@@ -25,14 +25,12 @@
 		</div>
 	</div>
 	
-
 	<header id="intro-heading">
 		<section id="intro-container">
 			<h1 id="intro-mainheader">JEFFREY CHOU</h1>
 			<p id="intro-subheader">WEB DEVELOPER</p>
 		</section>
 	</header>
-
 
 	<div>
 		<div class="section-container">
@@ -112,26 +110,24 @@
 		</div>
 	</div>
 	
-	<div>
 	<div class="section-container">
 		<section id="my-work">
 			<h2 id="my-work-header">My Work</h2>
 			<div id="project-container">
-				
+				<p>STUFF</p>
 			</div>
 		</section>
 	</div>
-	</div>
 
-	<div>
 	<div class="section-container">
 		<section id="contact">
 			<h2 id="contact-header">Contact Me!</h2>
 			<div id="contact-info-container">
-			
+				<a href="mailto:jeffrey.chou.89@gmail.com"><img src="./public/pictures/email_cc.png" alt="e-mail_icon"/></a>
+				<a href="https://github.com/blupie01"><img src="./public/pictures/github_cc.png" alt="github_icon"/></a>
+				<a href="https://www.linkedin.com/in/jeffrey-chou-5b713042/"><img src="./public/pictures/linkedin_cc.png" alt="linkedin_icon"/></a>
 			</div>
 		</section>
-	</div>
 	</div>
 
 	<footer id="footer">
